--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -76,7 +76,7 @@
     <!-- Contenedor -->
 
     
-    <div class="fondo-main-carrito">
+    <div id = "fondo-carrito" class="fondo-main-carrito">
       <div id="main-carrito" class="main-carrito"></div>
 
       <div class="total">
